chore: signals array

--- a/src/app/products/product-selection/product-selection.component.html
+++ b/src/app/products/product-selection/product-selection.component.html
@@ -4,6 +4,16 @@
 
 <div class="grid">
   <div class="row">
+    <div class="cellFull">
+      <select>
+        <option value="undefined">--Select a product--</option>
+        @for(product of products(); track product.id) {
+        <option [ngValue]="product">{{ product.productName }}</option>
+        }
+      </select>
+    </div>
+  </div>
+  <div class="row">
     <div class="cellLeft">
       <label for="quantity">Quantity:</label>
     </div>
