--- a/src/app/products/product-selection/product-selection.component.html
+++ b/src/app/products/product-selection/product-selection.component.html
@@ -5,13 +5,25 @@
 <div class="grid">
   <div class="row">
     <div class="cellFull">
-      <select>
+      <select [(ngModel)]="selectedProduct">
         <option value="undefined">--Select a product--</option>
         @for(product of products(); track product.id) {
         <option [ngValue]="product">{{ product.productName }}</option>
         }
       </select>
     </div>
+  </div>
+  <div class="row">
+    <div class="cellLeft">Name:</div>
+    <div class="cellRight">{{ selectedProduct()?.productName }}</div>
+  </div>
+  <div class="row">
+    <div class="cellLeft">Description:</div>
+    <div class="cellRight">{{ selectedProduct()?.description }}</div>
+  </div>
+  <div class="row">
+    <div class="cellLeft">Price:</div>
+    <div class="cellRight">{{ selectedProduct()?.price }}</div>
   </div>
   <div class="row">
     <div class="cellLeft">
