--- a/src/app/products/product-selection/product-selection.component.html
+++ b/src/app/products/product-selection/product-selection.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
       <div class="cellLeft">Price:</div>
-      <div class="cellRight">{{ selectedProduct()?.price }}</div>
+      <div class="cellRight">{{ selectedProduct()?.price | currency }}</div>
     </div>
     <div class="row">
       <div class="cellLeft">
@@ -41,6 +41,12 @@
           <button class="qtyButton qtyButtonRight" (click)="onIncrease()">
             +
           </button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="cellLeft">Total:</div>
+        <div class="cellRight" [style.color]="color()">
+          {{ total() | currency }}
         </div>
       </div>
     </div>
