chore: add loading indicator

--- a/src/app/products/product-selection/product-selection.component.html
+++ b/src/app/products/product-selection/product-selection.component.html
@@ -1,5 +1,9 @@
 <div class="content">
   <div class="title">{{ pageTitle }}</div>
+
+  @if(isLoading()) {
+  <div>...loading products</div>
+  } @else {
   <div class="grid">
     <div class="row">
       <div class="cellFull">
@@ -51,4 +55,5 @@
       </div>
     </div>
   </div>
+  }
 </div>
