chore: add error handling

--- a/src/app/products/product-selection/product-selection.component.html
+++ b/src/app/products/product-selection/product-selection.component.html
@@ -3,6 +3,8 @@
 
   @if(isLoading()) {
   <div>...loading products</div>
+  } @else if (errorMessage()) {
+  <div style="color: red">An error occurred: {{ errorMessage() }}</div>
   } @else {
   <div class="grid">
     <div class="row">
