--- a/src/app/reviews/review-list/review-list.component.html
+++ b/src/app/reviews/review-list/review-list.component.html
@@ -1,1 +1,29 @@
-<p>review-list works!</p>
+<div class="container">
+  @if(reviews().length){
+  <table>
+    <caption>
+      Product Reviews
+    </caption>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Review</th>
+        <th>Username</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for(review of reviews(); track review.id){
+      <tr>
+        <td>{{ review.title }}</td>
+        <td>{{ review.text }}</td>
+        <td>{{ review.userName }}</td>
+      </tr>
+      }
+    </tbody>
+  </table>
+  } @else if(isLoading()) {
+  <div>...Loading reviews</div>
+  } @else {
+  <div>No reviews available for the selected product.</div>
+  }
+</div>
